# SciCom22

./: Cargo.toml  README.md  main.py  pyproject.toml  requirements.txt  setup.py
scicom/: README.md  __init__.py  __main__.py  integration.py  newtonian.py  solar_system_sim.py  test.py  test2.py  visualization.py
scicom/examples/: black_hole_comet.yml  isco.yml  sun_comet.yml  sun_earth.yml
scicom/newton/: __init__.py  nbody.py
scicom/post_newton_eih/: __init__.py  nbody.py
scicom/render/: plotconfig.mplstyle  plotting.py  render.py  renderlib.py  simpleplot.py
scicom/rustlib/src/: lib.rs
scicom/styles/: planets.mplstyle
