[build-system]
requires = ["maturin", "poetry"]
build-backend = "maturin"

[project]
name = "scicom"
version = "1.0.0"
authors = [{name = "Sophia D.", email = ""},
           {name = "Ole B.", email = ""}]
description = "simulating the n-body problem for fun and profit"
homepage = "https://github.com/thatGuySpectre/SciCom22"
readme = "README.md"

[tool.maturin]
crate-directory = "scicom/rustlib"
build-args = ["--release"]
